--- a/vs2017test/vs2017test.vcxproj
+++ b/vs2017test/vs2017test.vcxproj
@@ -119,9 +119,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AssistingState.cpp" />
+    <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="Cell.cpp" />
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="ChasingState.cpp" />
+    <ClCompile Include="Grenade.cpp" />
     <ClCompile Include="Luggage.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Room.cpp" />
@@ -133,11 +135,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AssistingState.h" />
+    <ClInclude Include="Bullet.h" />
     <ClInclude Include="Cell.h" />
     <ClInclude Include="Character.h" />
     <ClInclude Include="ChasingState.h" />
     <ClInclude Include="Enum.h" />
     <ClInclude Include="glut.h" />
+    <ClInclude Include="Grenade.h" />
     <ClInclude Include="Luggage.h" />
     <ClInclude Include="Room.h" />
     <ClInclude Include="RuningState.h" />
